# staleguard

./: .gitignore  README.md  pyproject.toml
eval_cases/kubernetes/: cases.json  corpus.json
examples/engineering_demo/: corpus_large.json
examples/redis_demo/: corpus.json  corpus_large.json  retrieved_mixed.json  retrieved_stale.json
src/: __init__.py  api.py  auditor.py  chroma_demo.py  cli.py  config.py  engineering_demo.py  eval.py  main.py  matching.py  providers.py  schema.py  types.py
src/adapters/: __init__.py  chroma.py  json_adapter.py  langchain.py
src/alternatives/: __init__.py  finder.py
src/conflicts/: __init__.py  nli.py  rules.py
src/poc/: conflict_detector.py  metadata_filter.py  staleness_score.py
src/scorers/: freshness.py
staleguard/: __init__.py  cli.py
staleguard/alternatives/: finder.py
staleguard/conflicts/: rules.py
staleguard/scorers/: __init__.py
tests/: test_alternatives.py  test_auditor.py  test_conflicts.py  test_freshness.py  test_provenance.py
